# Spatz-STLs

./: CMakeLists.txt  README.md
FPU/: main.c
FPU/kernel/: STLs.c  STLs.h
FPU/script/: gen_data.py  random_TP_VL_512.json
include/: riscv_vec_defs.c  riscv_vec_defs.h
